#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(cherly, 0.0.1)
# AC_CONFIG_HEADER([c/config.h])

# Checks for programs.
AC_PROG_CC
AC_PATH_PROG(ERL, erl)
AC_PATH_PROG(ERLC, erlc)
# 
AC_ARG_WITH(judy,
    [ --with-judy=<path> prefix of Judy installation. e.g. /usr/local or /usr],
    [JUDY_PREFIX=$with_judy],
		[JUDY_PREFIX=/usr/local])

AC_SUBST(JUDY_PREFIX)
JUDY_LIBS="-L${JUDY_PREFIX}/lib -lJudy"
JUDY_CFLAGS="-I${JUDY_PREFIX}/include"
AC_SUBST(JUDY_LIBS)
AC_SUBST(JUDY_CFLAGS)


ERLDIR=`awk -F= '/ROOTDIR=/ { print [$]2; exit; }' $ERL`
AC_SUBST(ERL)
AC_SUBST(ERLC)
AC_SUBST(ERLBINDIR)
AC_SUBST(ERLDIR)

ERL_INTERFACE=`ls ${ERLDIR}/lib | grep erl_interface | tail -n 1`

ERTSBASE="`$ERL -noshell -noinput -eval 'io:format (\"~s\", [[ \"/\" ++ filename:join (lists:reverse ([ \"erts-\" ++ erlang:system_info (version) | tl (lists:reverse (string:tokens (code:lib_dir (), \"/\"))) ])) ]]).' -s erlang halt `"
AC_SUBST(ERTSBASE)

CPPFLAGS="$CPPFLAGS -I ${ERTSBASE}/include -I ${ERLDIR}/lib/${ERL_INTERFACE}/include -Wall -fPIC -I./"

LIBEI="${ERLDIR}/lib/${ERL_INTERFACE}/lib/libei.a"
AC_SUBST(LIBEI)
# Checks for header files.
AC_CHECK_HEADERS([])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_HEADER_STDC

AC_OUTPUT([c/Makefile erl/Makefile])
